--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,11 +56,11 @@
 
 	<script src="libs/angularjs/1.2/angular.min.js"></script>
 	<script src="libs/angularjs/1.2/angular-ui-router.min.js"></script>
+    <script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
 	<script src="js/domains/attendee.js"></script>
 	<script src="js/domains/event.js"></script>
 	<script src="js/angular/scripts/createEvent.js"></script>
 	<script src="eventApp.js"></script>
 	<script src="js/angular/controllers/newEventController.js"></script>
-
 </body>
 </html>
