created stages folder, display on new page functioning

--- a/src/main/webapp/stages/eventResults.ng.html
+++ b/src/main/webapp/stages/eventResults.ng.html
@@ -1,5 +1,4 @@
-<h1><u>Results:</u></h1>
-<hr/>
+<h1 style="text-decoration: underline">Results:</h1>
 <p>Event name: {{eventName}}.</p>
 <p>Event desc: {{eventDescription}}.</p>
 <p>Event checkbox1: {{eventCheckbox1}}. </p>
@@ -10,9 +9,5 @@
 <p>Event state: {{eventState}}</p>
 <p>Event zip: {{eventZip}}</p>
 <p>Event country: {{eventCountry}}</p>
-<p>Event start date: {{eventStartMonth}}/{{eventStartDay}}/{{eventStartYear}}</p>
-<p>Event start Time: {{eventStartHour}}:{{eventStartMinute}} {{eventStartMeridiem}}</p>
-<p>Event end date: {{eventEndMonth}}/{{eventEndDay}}/{{eventEndYear}}</p>
-<p>Event end Time: {{eventEndHour}}:{{eventEndMinute}} {{eventEndMeridiem}}</p>
-
-
+<p>Event startDate: {{eventStartDate}}</p>
+<p>Event endDate: {{eventEndDate}}</p>
