--- a/src/main/webapp/stages/events.ng.html
+++ b/src/main/webapp/stages/events.ng.html
@@ -2,9 +2,7 @@
 	<div>
 		<div class="row">
 			<div class="col-md-12">
-				<h1>
-					<u>Plan Upcoming Events!</u>
-				</h1>
+				<h1 style="text-decoration: underline">Plan Upcoming Events!</h1>
 			</div>
 		</div>
 		<div class="row">
@@ -34,8 +32,7 @@
 			</div>
 		</div>
 		<br>
-		<div class="row"
-			ng-class="{ 'has-error : eventForm.desc.$invalid && !eventForm.desc.&pristine}">
+		<div class="row">
 			<div class="col-md-1 col-md-offset-2 align-right">Description:</div>
 			<div class="col-md-5">
 				<textarea name="desc" ng-model="eventUIObject.description"
@@ -244,13 +241,13 @@
 				ng-class="{ 'has-error' : eventForm.startDate.$invalid && !eventForm.startDate.$pristine }">
 				<div class="col-md-1 col-md-offset-2 align-right">Event
 					Starting Date:</div>
-				<div class="col-md-2 ">
-					<input type="datetime-local" ng-model="startDate" name="startDate"
+				<div class="col-md-2">
+					<input type="datetime-local" ng-model="eventUIObject.startDate" name="startDate"
 						class="form-control" required></input>
 				</div>
-				<div class="col-md-1">
+				<div class="col-md-9 align-left"></div>
 					<p
-						ng-show="eventForm.startDate.$invalid && !eventForm.startDate.$pristine"
+						 ng-show="eventForm.startDate.$invalid && !eventForm.startDate.$pristine"
 						class="help-block">The event start date is required</p>
 				</div>
 			</div>
@@ -262,11 +259,11 @@
 				ng-class="{ 'has-error' : eventForm.endDate.$invalid && !eventForm.endDate.$pristine }">
 				<div class="col-md-1 col-md-offset-2 align-right">Event
 					Starting Date:</div>
-				<div class="col-md-2 ">
-					<input type="datetime-local" ng-model="endDate" name="endDate"
+				<div class="col-md-2">
+					<input type="datetime-local" ng-model="eventUIObject.endDate" name="endDate"
 						class="form-control" required></input>
 				</div>
-				<div class="col-md-1">
+				<div class="col-md-9 align-left">
 					<p
 						ng-show="eventForm.endDate.$invalid && !eventForm.endDate.$pristine"
 						class="help-block">The event start date is required</p>
@@ -276,88 +273,7 @@
 
 		<br> <br>
 		<div>
-			<form>
-				<div class="row">
-					<div class="col-md-3 align-right">
-						<label>Add Event Attendees: </label>
-					</div>
-					<div class="col-md-9">
-						<p id="attendeeError"></p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-2 col-md-offset-3">First Name:</div>
-					<div class="col-md-7"></div>
-				</div>
-				<div class="row" ng-class="{ 'has-error' : eventForm.firstName.$invalid && !eventForm.firstName.$pristine }">
-					<div class="col-md-2 col-md-offset-3">
-						<input type="text" class="form-control" ng-model="attendee.firstName" name="firstName" required />
-					</div>
-					<div class="col-md-7">
-						<p
-						ng-show="eventForm.firstName.$invalid && !eventForm.firstName.$pristine"
-						class="help-block">Attendee first name Required</p>
-					</div>
-				</div>
-				<br>
-				<div class=row>
-					<div class="col-md-2 col-md-offset-3">Last Name:</div>
-					<div class="col-md-7"></div>
-				</div>
-				<div class="row" ng-class="{ 'has-error' : eventForm.lastName.$invalid && !eventForm.lastName.$pristine }">
-					<div class="col-md-2 col-md-offset-3">
-						<input type="text" class="form-control" ng-model="attendee.lastName"
-							name="lastName" />
-					</div>
-					<div class="col-md-7">
-						<p
-						ng-show="eventForm.lastName.$invalid && !eventForm.lastName.$pristine"
-						class="help-block">Attendee last name Required</p>
-					</div>
-				</div>
-				<br>
-				<div class="row">
-					<div class="col-md-2 col-md-offset-3">Attendee Email:</div>
-				</div>
-				<div class="row" ng-class="{ 'has-error' : eventForm.email.$invalid && !eventForm.email.$pristine }">
-					<div class="col-md-3 col-md-offset-3">
-						<input type="email" class="form-control" name="email" ng-model="attendee.email"
-							 size="35" />
-					</div>
-					<div class="col-md-6">
-						<p
-						ng-show="eventForm.email.$invalid && !eventForm.email.$pristine"
-						class="help-block">Attendee email Required</p>
-					</div>
-				</div>
-				<br>
-				<div class="row">
-					<div class="col-md-2 col-md-offset-3">
-						<button id="attendeeButton" class="btn btn-primary"
-							onclick="addAttendee()">Add Attendee</button>
-					</div>
-					<div class="col-md-7"></div>
-				</div>
-			</form>
-			<br>
-			<div class="row">
-				<div class="col-md-2 col-md-offset-3 align-left">Event
-					Attendee List:</div>
-				<div class="col-md-7"></div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 col-md-offset-3">
-					<table border=1 id="attendeeTable" style="width: 500px">
-						<tr>
-							<td><b>#</b></td>
-							<td><b>Name</b></td>
-							<td><b>Email</b></td>
-							<td><b>Action</b></td>
-						</tr>
-					</table>
-				</div>
-				<div class="col-md-5"></div>
-			</div>
+			
 		</div>
 
 		<br> <br>
@@ -366,6 +282,8 @@
 				<input type="submit" class="btn btn-primary"
 					ng-disabled="eventForm.$invalid" value="Submit" />
 			</div>
-			<div class="col-md-2"></div>
+			<div class="col-md-2">
+				<a ui-sref="eventResults">Event Results</a>
+			</div>
 		</div>
 </form>
