Attendee form funtioning, fixed dynamic table, error: name and email not displaying.

--- a/src/main/webapp/stages/eventResults.ng.html
+++ b/src/main/webapp/stages/eventResults.ng.html
@@ -11,3 +11,4 @@
 <p>Event country: {{eventCountry}}</p>
 <p>Event startDate: {{eventStartDate}}</p>
 <p>Event endDate: {{eventEndDate}}</p>
+<p>Event attendeeName: {{attendeeName}}</p>
