--- a/src/main/webapp/stages/eventResults.ng.html
+++ b/src/main/webapp/stages/eventResults.ng.html
@@ -1,14 +1,2 @@
 <h1 style="text-decoration: underline">Results:</h1>
-<p>Event name: {{eventName}}.</p>
-<p>Event desc: {{eventDescription}}.</p>
-<p>Event checkbox1: {{eventCheckbox1}}. </p>
-<p>Event checkbox1: {{eventCheckbox2}}. </p>
-<p>Event address1: {{eventAddress1}}</p>
-<p>Event address2: {{eventAddress2}}</p>
-<p>Event city: {{eventCity}}</p>
-<p>Event state: {{eventState}}</p>
-<p>Event zip: {{eventZip}}</p>
-<p>Event country: {{eventCountry}}</p>
-<p>Event startDate: {{eventStartDate}}</p>
-<p>Event endDate: {{eventEndDate}}</p>
-<p>Event attendeeName: {{attendeeName}}</p>
+<p>Event: {{eventArray[0].toString()}}</p>
