workiing in display and modification of event

--- a/src/main/webapp/stages/eventOverview.ng.html
+++ b/src/main/webapp/stages/eventOverview.ng.html
@@ -1,2 +1,2 @@
 <h1 style="text-decoration: underline">Results:</h1>
-<p>Event: {{eventArray[0].toString()}}</p>
+<p>Event: {{event[event.length-1].toString()}}</p>
