--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myFamilyApp">
+<html ng-app="myFamilyApp" ng-controller="newEventController">
 <head>
 <meta charset="ISO-8859-1">
 <title>Main Page: My Family</title>
@@ -59,5 +59,6 @@
 	<script src="js/angular/domains/attendee.js"></script>
 	<script src="js/angular/domains/event.js"></script>
 	<script src="js/angular/controllers/newEventController.js"></script>
+	<script src="js/angular/controllers/eventOverviewController.js"></script>
 </body>
 </html>
