Finished implementing service for multipul stage view, finally began dispaly of overview and edit page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myFamilyApp" ng-controller="newEventController">
+<html ng-app="myFamilyApp">
 <head>
 <meta charset="ISO-8859-1">
 <title>Main Page: My Family</title>
@@ -55,10 +55,12 @@
 	<script src="libs/angularjs/1.2/angular.min.js"></script>
 	<script src="libs/angularjs/1.2/angular-ui-router.min.js"></script>
 	<script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
-	<script src="eventApp.js"></script>
+	<script src="app.js"></script>
+    <script scr="js/angular/services/global.js"></script>
 	<script src="js/angular/domains/attendee.js"></script>
 	<script src="js/angular/domains/event.js"></script>
 	<script src="js/angular/controllers/newEventController.js"></script>
 	<script src="js/angular/controllers/eventOverviewController.js"></script>
+
 </body>
 </html>
