--- a/src/main/webapp/stages/events.ng.html
+++ b/src/main/webapp/stages/events.ng.html
@@ -1,9 +1,10 @@
 <div >
 <form name="eventForm" novalidate>
 	<div class="row">
-		<div class="col-md-12">
-			<h1 style="text-decoration: underline">Plan Upcoming Events!</h1>
+		<div class="col-md-6 col-md-offset-4 align-right">
+			<h1>Plan Upcoming Events!</h1>
 		</div>
+        <div class="col-md-2"></div>
 	</div>
 	<div class="row">
 		<div class="col-md-12">
