--- a/src/main/webapp/stages/eventOverview.ng.html
+++ b/src/main/webapp/stages/eventOverview.ng.html
@@ -1,2 +1,17 @@
-<h1 style="text-decoration: underline">Results:</h1>
-<p>Event: {{event[event.length-1].toString()}}</p>
+<div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-4 align-right"><h1>Overview of {{event.getEventName()}}</h1></div>
+        <div class="col-md-2"></div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-3 col-md-offset-3">
+            <p>Name: {{event.getEventName()}}</p>
+        </div>
+        <div class="col-md-3 col-md-offset-1 align-right">
+            <p>Description: {{event.getEventDescription()}}</p>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+
+</div>
