--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,66 +1,55 @@
 <!DOCTYPE html>
 <html ng-app="myFamilyApp">
 <head>
-<meta charset="ISO-8859-1">
-<title>Main Page: My Family</title>
+    <meta charset="ISO-8859-1">
+    <title>Main Page: My Family</title>
 
-<link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css"
-	rel="stylesheet" type="text/css" />
-<link href="css/index.css" type="text/css" rel="stylesheet" />
-<link href="css/main-layout.css" type="text/css" rel="stylesheet" />
+    <link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css"
+          rel="stylesheet" type="text/css"/>
+    <link href="css/index.css" type="text/css" rel="stylesheet"/>
+    <link href="css/event.css" type="text/css" rel="stylesheet"/>
+    <link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-	<div id="header-container" class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">Header</div>
-		</div>
-	</div>
+<div id="header-container" class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">Header</div>
+    </div>
+</div>
 
-	<div id="primary-navigation-container" class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">
-				<span style="margin-right: 10px; text-align: left;"> <a
-					href="index.html"> Home </a>
-				</span> <span style="margin-right: 10px; text-align: left;"> <a
-					href="familySearch.html"> My Family Search! </a>
-				</span> <span style="margin-right: 10px; text-align: left;"> <a
-					href="signup.html"> Sign Up! </a>
-				</span> <span style="margin-right: 10px; text-align: left;"> <a
-					ui-sref="createEvent">Create Event</a>
-				</span>
-			</div>
-		</div>
-	</div>
+<div id="primary-navigation-container" class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+                    <span style="margin-right: 10px; text-align: left;"> <a
+                            ui-sref="home">Create Event</a>
+                    </span> <span style="margin-right: 10px; text-align: left;"> <a
+                href="familySearch.html"> My Family Search! </a>
+                    </span> <span style="margin-right: 10px; text-align: left;"> <a
+                href="signup.html"> Sign Up! </a>
+                    </span> <span style="margin-right: 10px; text-align: left;"> <a
+                ui-sref="createEvent">Create Event</a>
+                    </span>
+        </div>
+    </div>
+</div>
 
-	<div class="well" ui-view></div>
+<div class="well" ui-view></div>
 
-	<div class="row">
-		<div class="col-md-4 family">
-			<a href="familySearch.html">My Family Search</a>
-		</div>
-		<div class="col-md-4 join ">
-			<a href="Signup.html"> Sign Up! </a>
-		</div>
-		<div class="col-md-4 upcoming ">
-			<a href="events.html"> Upcoming events </a>
-		</div>
-	</div>
+<div id="footer-container" class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">Footer</div>
+    </div>
+</div>
 
-	<div id="footer-container" class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">Footer</div>
-		</div>
-	</div>
-
-	<script src="libs/angularjs/1.2/angular.min.js"></script>
-	<script src="libs/angularjs/1.2/angular-ui-router.min.js"></script>
-	<script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
-	<script src="app.js"></script>
-    <script scr="js/angular/services/global.js"></script>
-	<script src="js/angular/domains/attendee.js"></script>
-	<script src="js/angular/domains/event.js"></script>
-	<script src="js/angular/controllers/newEventController.js"></script>
-	<script src="js/angular/controllers/eventOverviewController.js"></script>
+<script src="libs/angularjs/1.2/angular.min.js"></script>
+<script src="libs/angularjs/1.2/angular-ui-router.min.js"></script>
+<script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
+<script src="app.js"></script>
+<script scr="js/services/global.js"></script>
+<script src="js/domains/attendee.js"></script>
+<script src="js/domains/event.js"></script>
+<script src="js/controllers/newEventController.js"></script>
+<script src="js/controllers/eventOverviewController.js"></script>
 
 </body>
 </html>
