Work on eventOverview.ng.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-<div class="well" ui-view></div>
+<div ui-view></div>
 
 <div id="footer-container" class="container-fluid">
     <div class="row">
