finished eventOverview, created modifyEvent.ng.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-md-12">
                     <span style="margin-right: 10px; text-align: left;"> <a
-                            ui-sref="home">Create Event</a>
+                            ui-sref="home">Home</a>
                     </span> <span style="margin-right: 10px; text-align: left;"> <a
                 href="familySearch.html"> My Family Search! </a>
                     </span> <span style="margin-right: 10px; text-align: left;"> <a
