--- a/src/main/webapp/stages/eventOverview.ng.html
+++ b/src/main/webapp/stages/eventOverview.ng.html
@@ -1,14 +1,14 @@
 <div class="well">
     <div class="row">
-        <div class="col-md-12 align-center"><h1>Overview of {{event.getEventName()}}</h1></div>
+        <div class="col-md-12 align-center"><h1>Overview of {{event.getName()}}</h1></div>
     </div>
     <br><br>
     <div class="row">
         <div class="col-md-2 col-md-offset-4">
-            <p>Name: {{event.getEventName()}}</p>
+            <p>Name: {{event.getName()}}</p>
         </div>
         <div class="col-md-5 col-md-offset-1">
-            <p>Description: {{event.getEventDescription()}}</p>
+            <p>Description: {{event.getDescription()}}</p>
         </div>
     </div>
     <br>
@@ -17,26 +17,56 @@
             <p>Event Address: {{event.getFullAddress()}}</p>
         </div>
         <div class="col-md-5 col-md-offset-1">
-            <p>Guests can invite other guest: {{event.getCheckbox1()}}</p>
-        </div>
-    </div>
-    <br>
-    <div class="row">
-        <div class="col-md-3 col-md-offset-3">
             <p>Event URL: {{event.getUrl()}}</p>
         </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-3 col-md-offset-3">
+            <p>Event start date & time: {{getDate(event.getStartDate())}} {{getTime(event.getStartDate())}}</p>
+        </div>
         <div class="col-md-5 col-md-offset-1">
-            <p>Guests can see other guest: {{event.getCheckbox2()}}</p>
+            <p>Guests {{guestCan(event.getCheckbox1())}} invite other guest</p>
         </div>
     </div>
     <br>
     <div class="row">
         <div class="col-md-3 col-md-offset-3">
-            <p>Event Start Date: {{event.getStartDate().getMonth()}}/{{event.getStartDate().getDate()}}/{{event.getStartDate().getFullYear()}}
-                {{getRegTime(event.getStartDate().getHours(), event.getStartDate().getMinutes())}}</p>
+            <p>Event end  date & time: {{getDate(event.getEndDate())}} {{getTime(event.getEndDate())}}
+                </p>
         </div>
         <div class="col-md-5 col-md-offset-1">
-            <p>Event End Time: {{event.getEndDate()}}</p>
+            <p>Guests {{guestCan(event.getCheckbox2())}} see other guest</p>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-3 col-md-offset-3">
+            <table class="table table-condensed table-striped">
+                <tr class="info">
+                    <td><b>#</b></td>
+                    <td><b>Name</b></td>
+                    <td><b>Email</b></td>
+                </tr>
+                <tr ng-repeat="x in attendeeArray">
+                    <td>{{$index + 1}}</td>
+                    <td>{{x.getName()}}</td>
+                    <td>{{x.getEmail()}}</td>
+                </tr>
+            </table>
+        </div>
+        <div class="col-md-5 col-md-offset-1">
+            <div class="row">
+                <a class="btn btn-default" ui-sref="home" role="button">Return Home</a>
+            </div>
+            <br>
+            <div class="row">
+                <a class="btn btn-default" ui-sref="modifyEvent" role="button">Modify {{event.getName()}}</a>
+            </div>
+            <br>
+            <div class="row">
+                <a class="btn btn-default" ui-sref="createEvent" role="button">Create another</a>
+            </div>
         </div>
     </div>
 </div>
