--- a/src/main/webapp/stages/eventOverview.ng.html
+++ b/src/main/webapp/stages/eventOverview.ng.html
@@ -7,6 +7,7 @@
         <div class="col-md-2 col-md-offset-4">
             <p>Name: {{event.getName()}}</p>
         </div>
+        <div class="col-md-1"><a ui-sref=".editName">edit</a></div>
         <div class="col-md-5 col-md-offset-1">
             <p>Description: {{event.getDescription()}}</p>
         </div>
