--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,7 +45,7 @@
 <script src="libs/angularjs/1.2/angular-ui-router.min.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
 <script src="app.js"></script>
-<script scr="js/services/global.js"></script>
+<script src="js/services/EventService.js"></script>
 <script src="js/domains/attendee.js"></script>
 <script src="js/domains/event.js"></script>
 <script src="js/controllers/homeController.js"></script>
