--- a/src/main/webapp/stages/eventOverview.ng.html
+++ b/src/main/webapp/stages/eventOverview.ng.html
@@ -1,18 +1,28 @@
 <div class="well">
     <div class="row">
-        <div class="col-md-12 align-center"><h1>Overview of {{event.getName()}}</h1></div>
+        <div class="col-md-12 align-center"><h1>Event Overview</h1></div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 align-right">
+            <a ui-sref="createEvent">edit</a>
+        </div>
+        <div class="col-md-6 align-left">
+            <a ui-sref="createEvent">delete</a>
+        </div>
     </div>
     <br><br>
+
     <div class="row">
-        <div class="col-md-2 col-md-offset-4">
+        <div ui-view class="col-md-3 col-md-offset-3">
             <p>Name: {{event.getName()}}</p>
         </div>
-        <div class="col-md-1"><a ui-sref=".editName">edit</a></div>
+        <div class="col-md-1"></div>
         <div class="col-md-5 col-md-offset-1">
             <p>Description: {{event.getDescription()}}</p>
         </div>
     </div>
     <br>
+
     <div class="row">
         <div class="col-md-3 col-md-offset-3">
             <p>Event Address: {{event.getFullAddress()}}</p>
@@ -22,6 +32,7 @@
         </div>
     </div>
     <br>
+
     <div class="row">
         <div class="col-md-3 col-md-offset-3">
             <p>Event start date & time: {{getDate(event.getStartDate())}} {{getTime(event.getStartDate())}}</p>
@@ -31,43 +42,58 @@
         </div>
     </div>
     <br>
+
     <div class="row">
         <div class="col-md-3 col-md-offset-3">
-            <p>Event end  date & time: {{getDate(event.getEndDate())}} {{getTime(event.getEndDate())}}
-                </p>
+            <p>Event end date & time: {{getDate(event.getEndDate())}} {{getTime(event.getEndDate())}}
+            </p>
         </div>
         <div class="col-md-5 col-md-offset-1">
             <p>Guests {{guestCan(event.getCheckbox2())}} see other guest</p>
         </div>
     </div>
     <br>
+
     <div class="row">
-        <div class="col-md-3 col-md-offset-3">
-            <table class="table table-condensed table-striped">
-                <tr class="info">
-                    <td><b>#</b></td>
-                    <td><b>Name</b></td>
-                    <td><b>Email</b></td>
-                </tr>
-                <tr ng-repeat="x in attendeeArray">
-                    <td>{{$index + 1}}</td>
-                    <td>{{x.getName()}}</td>
-                    <td>{{x.getEmail()}}</td>
-                </tr>
-            </table>
+        <div class="col-md-2 col-md-offset-3">
+            Event Attendee List
         </div>
-        <div class="col-md-5 col-md-offset-1">
-            <div class="row">
-                <a class="btn btn-default" ui-sref="home" role="button">Return Home</a>
-            </div>
-            <br>
-            <div class="row">
-                <a class="btn btn-default" ui-sref="modifyEvent" role="button">Modify {{event.getName()}}</a>
-            </div>
-            <br>
-            <div class="row">
-                <a class="btn btn-default" ui-sref="createEvent" role="button">Create another</a>
-            </div>
-        </div>
+        <div class="col-md-7"></div>
     </div>
+    <br>
+
+    <div class="col-md-6 col-md-offset-3">
+        <table class="table table-condensed table-striped">
+            <tr class="info">
+                <td><b>#</b></td>
+                <td><b>Name</b></td>
+                <td><b>Email</b></td>
+            </tr>
+            <tr ng-repeat="x in attendeeArray">
+                <td>{{$index + 1}}</td>
+                <td>{{x.getName()}}</td>
+                <td>{{x.getEmail()}}</td>
+            </tr>
+        </table>
+    </div>
+    <div class="col-md-3"></div>
+    <br>
+
+    <div class="row">
+        <div class="co-md-6 col-md-offset-3">
+
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+    <br>
+
+    <div class="row align-right">
+        <div class="col-md-9">
+            <a class="btn btn-default" ui-sref="home" role="button">Edit</a>
+
+            <a class="btn btn-default" ui-sref="modifyEvent" role="button">Remove</a>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+
 </div>
